<resources>
    <string name="app_name">UTS PAM Aplikasi</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="tombol_login">Login</string>
    <string name="pengguna_baru">Pengguna Baru?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="designed_by_carlos">Designed by Carlos</string>
    <string name="loading">Loading</string>
    <string name="daftar">Daftar</string>
    <string name="register">Register</string>
    <string name="emailregis">Email</string>
    <string name="tologin">Login</string>
    <string name="passwordregis">Password</string>
    <string name="udah_punya_akun">Udah punya akun?</string>
</resources>