<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/swlogin"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/material_dynamic_primary20"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/edt_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:autofillHints="password"
                android:inputType="numberPassword"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lupa_password"
                android:textStyle="bold"
                android:textAlignment="textEnd" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:text="@string/tombol_login"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:text="@string/pengguna_baru"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_to_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar_disini"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>