<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/swlogin"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/material_dynamic_primary20"
        app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailregis"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edt_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordregis"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/daftar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/udah_punya_akun"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tologin"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>

</RelativeLayout>